--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <body>
 
     <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
-        <header class="flex pt-10 mb-20">
-            <div >
+        <header class=" lg:flex pt-10 mb-20">
+            <div class="items-center justify-center">
                 <h1 class=" text-5xl md:text-5xl font-extrabold">It's good <br>
                     tea time at The <br>
                     Tea House</h1>
@@ -54,6 +54,40 @@
             </div>
 
         </header>
+
+        <!--feature section-->
+        <section class=" py-8 lg:py-24">
+          <div class="text-center mb-10">
+            <h2 class="text-3xl md:text-4xl font-extrabold pb-5">Our Featured Products</h2>
+            <p class="text-gray-700 mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+          </div>
+          <!--grid card -->
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 text-center  gap-6">
+            <div class="rounded-lg bg-gray-50 shadow-md overflow-hidden">
+              <img class="mx-auto pt-4 pb-4" src="images/tea-1.png" alt="">
+              <h3 class="text-2xl font-bold pb-4">Milk tea</h3>
+              <p class="font-semibold text-gray-700 pb-4">Creamer could be replaced by fresh milk</p>
+              </div>
+              <!--grid 2-->
+              <div class="rounded-lg bg-gray-50 shadow-md overflow-hidden">
+                <img class="mx-auto pt-4 pb-4" src="images/tea-2.png" alt="">
+                <h3 class="text-2xl font-bold pb-4">Milk tea</h3>
+                <p class="font-semibold text-gray-700 pd-4">Creamer could be replaced by fresh milk</p>
+                </div>
+                <!--grid 3-->
+                <div class="rounded-lg bg-gray-50 shadow-md overflow-hidden">
+                  <img class="mx-auto pt-4 pb-3" src="images/tea-3.png" alt="">
+                  <h3 class="text-2xl font-bold pb-4">Milk tea</h3>
+                  <p class="font-semibold text-gray-700 pb-4">Creamer could be replaced by fresh milk</p>
+                  </div>
+                  <!--grid 4-->
+                  <div class="rounded-lg bg-gray-50 shadow-md overflow-hidden">
+                    <img class="mx-auto pt-4 pb-4" src="images/tea-4.png" alt="">
+                    <h3 class="text-2xl font-bold pb-4">Milk tea</h3>
+                    <p class="font-semibold text-gray-700 pb-4">Creamer could be replaced by fresh milk</p>
+                    </div>
+          </div>
+        </section>
     </main>
     
 </body>
