--- a/index.html
+++ b/index.html
@@ -88,6 +88,36 @@
                     </div>
           </div>
         </section>
+        <!--unncomkmokmm grid  layouut -->
+        
+        <section class="grid grid-cols-2">
+          <div class="grid grid-cols-2 grid-rows-3 lg:w-5/6 gap-3">
+
+            <div class="h-32 bg-gradient-to-r from-red-100 to-red-50 rounded-xl">
+
+            </div>
+            <div class="bg-orange-50 rounded-xl row-span-2">
+              <img class="mx-auto" src="images/fresh-1.png" alt="">
+            </div>
+            <div class="bg-orange-50 rounded-xl row-span-2">
+              <img class="mx-auto" src="images/fresh-2.png" alt="">
+            </div>
+            <div class="h-32 bg-gradient-to-r from-stone-300 to-stone-50 rounded-xl">
+
+            </div>
+
+          </div>
+          <!--text-->
+          <div>
+            <h1>Great Tea, Freshly Presented</h1>
+            <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+            <h4>Unique Taste</h4>
+            <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+            <h4>Premium Quality</h4>
+            <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+
+          </div>
+        </section>
     </main>
     
 </body>
